--- a/06-RAG-WITH-LANGCHAIN/env.example
+++ b/06-RAG-WITH-LANGCHAIN/env.example
@@ -8,8 +8,11 @@
 # LLM API Keys (En az biri gerekli)
 # ============================================
 
-# OpenAI API Key (Zorunlu - GPT-4 icin)
-OPENAI_API_KEY=sk-your-openai-api-key-here
+# Gemini API Key (Tercih edilen - bu projede kullanilan)
+GEMINI_API_KEY=your-gemini-api-key-here
+
+# OpenAI API Key (Opsiyonel - alternatif LLM icin)
+# OPENAI_API_KEY=sk-your-openai-api-key-here
 
 # Anthropic API Key (Opsiyonel - Claude icin)
 # ANTHROPIC_API_KEY=sk-ant-your-anthropic-api-key-here
@@ -18,16 +21,16 @@ OPENAI_API_KEY=sk-your-openai-api-key-here
 # LLM Configuration
 # ============================================
 
-# LLM Provider: openai | anthropic
-LLM_PROVIDER=openai
+# LLM Provider: gemini | openai | anthropic
+LLM_PROVIDER=gemini
 
-# Model Name
-LLM_MODEL=gpt-4-turbo-preview
+# Model Name (Gemini icin ornek: gemini-2.5-flash)
+LLM_MODEL=gemini-2.5-flash
 
 # Temperature (0.0 - 1.0)
 LLM_TEMPERATURE=0.7
 
-# Max Tokens
+# Max Tokens (tam LGS sorusu + cozum icin)
 LLM_MAX_TOKENS=2000
 
 # ============================================
@@ -40,7 +43,7 @@ LLM_MAX_TOKENS=2000
 EMBEDDING_MODEL=text-embedding-3-small
 
 # Embedding Provider: openai | huggingface
-EMBEDDING_PROVIDER=openai
+EMBEDDING_PROVIDER=huggingface
 
 # ============================================
 # Vector Store Configuration
