--- a/06-RAG-WITH-LANGCHAIN/requirements.txt
+++ b/06-RAG-WITH-LANGCHAIN/requirements.txt
@@ -73,6 +73,11 @@ jupyter>=1.0.0
 # anthropic>=0.18.0
 
 # ============================================
+# Optional: Google Gemini
+# ============================================
+google-genai>=0.2.0
+
+# ============================================
 # Optional: HuggingFace
 # ============================================
 # transformers>=4.37.0
